--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ python:
     - "pypy"
 install:
     - pip install .
-    - pip install mock
-script: py.test
+    - pip install mock pytest-cov
+script: py.test --cov=ecmc --cov-report term-missing
